WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168112
Fix the !ENABLE(WEBGL) build
https://bugs.webkit.org/show_bug.cgi?id=168112
Summary
Fix the !ENABLE(WEBGL) build
Csaba Osztrogonác
Reported
2017-02-10 02:31:55 PST
SSIA, fix is coming
Attachments
Patch
(1.23 KB, patch)
2017-02-10 02:35 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2017-02-10 02:35:08 PST
Created
attachment 301143
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-10 16:14:16 PST
Comment on
attachment 301143
[details]
Patch Clearing flags on attachment: 301143 Committed
r212164
: <
http://trac.webkit.org/changeset/212164
>
WebKit Commit Bot
Comment 3
2017-02-10 16:14:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug