Fix the !ENABLE(WEBGL) build https://bugs.webkit.org/show_bug.cgi?id=168112

Reviewed by Alex Christensen.

* html/canvas/WebGLRenderingContextBase.h:


Canonical link: https://commits.webkit.org/185204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212164 268f45cc-cd09-0410-ab3c-d52691b4dbfc